<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/container_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_login"
            android:textColor="#000000"
            android:textSize="17sp"

            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:paddingBottom="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="7dp"
            android:singleLine="true"
            android:text="12323"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/container_content"
        android:layout_marginTop="24dp"
        android:padding="8dp">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/button_save"
            android:background="@android:color/transparent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/dialog_button_cancel"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/dialog_button_save"
            android:textColor="@color/colorPrimaryDark"/>

    </RelativeLayout>


</RelativeLayout>